fix overflow

--- a/m2/s1/g4/parte1/postit.css
+++ b/m2/s1/g4/parte1/postit.css
@@ -2,6 +2,7 @@
 
 body{
     background-color: #666666;
+    overflow: hidden;
 }
 
 #board{
